fix(space): 其他主题未添加$space-gap变量

--- a/src/packages/styles/variables-jddkh.scss
+++ b/src/packages/styles/variables-jddkh.scss
@@ -908,4 +908,7 @@ $invoice-padding: 10px 10px 20px !default;
 $trendarrow-font-size: 14px !default;
 $trendarrow-before-icon-margin: 4px !default;
 
+// Space
+$space-gap: var(--nut-space-gap, 8px) !default;
+
 @import './mixins/index';
